--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "browser-sync": "2.11.1",
     "browserify": "13.0.0",
     "gulp-autoprefixer": "3.1.0",
-    "gulp-jade": "^1.1.0",
+    "gulp-jade": "1.1.0",
     "gulp-sass": "2.2.0",
+    "gulp-watch": "4.3.5",
     "require-dir": "0.3.0"
   },
   "author": "rudywaltz",
