--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "devDependencies": {
     "browser-sync": "2.11.1",
     "browserify": "13.0.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "3.1.0",
     "gulp-jade": "1.1.0",
     "gulp-sass": "2.2.0",
+    "gulp-sequence": "^0.4.5",
     "gulp-watch": "4.3.5",
     "require-dir": "0.3.0"
   },
