--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "browser-sync": "2.11.1",
     "browserify": "13.0.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "3.1.0",
     "gulp-jade": "1.1.0",
