"init javascript task"

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gulp-uglify": "1.5.3",
     "gulp-watch": "4.3.5",
     "require-dir": "0.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "3.7.0"
   },
   "author": "rudywaltz",
