add node version to package.json

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "3.7.0"
   },
+    "engines": {
+      "node": "5.9.0"
+  },
   "author": "rudywaltz",
   "license": "ISC"
 }
