--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gomba-podcast",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {},
@@ -10,18 +10,20 @@
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
+    "gulp-awspublish": "3.0.1",
     "gulp-jade": "1.1.0",
     "gulp-sass": "2.2.0",
     "gulp-sequence": "0.4.5",
     "gulp-uglify": "1.5.3",
     "gulp-watch": "4.3.5",
     "require-dir": "0.3.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "3.7.0"
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.7.0",
+    "yargs": "4.3.1"
   },
-    "engines": {
-      "node": "5.9.0"
+  "engines": {
+    "node": "5.9.0"
   },
   "author": "rudywaltz",
   "license": "ISC"
