--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "require-dir": "0.3.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
-    "watchify": "3.7.0",
-    "yargs": "4.3.1"
+    "watchify": "3.7.0"
   },
   "engines": {
     "node": "5.9.0"
