--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.2",
   "description": "",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "list.js": "^1.2.0"
+  },
   "devDependencies": {
     "browser-sync": "2.11.1",
     "browserify": "13.0.0",
     "del": "2.2.0",
+    "eslint": "^2.4.0",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
     "gulp-awspublish": "3.0.1",
