--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "list.js": "1.2.0"
   },
   "devDependencies": {
-    "browser-sync": "2.11.1",
+    "browser-sync": "2.11.2",
     "browserify": "13.0.0",
     "del": "2.2.0",
-    "eslint": "2.4.0",
+    "eslint": "2.5.1",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
     "gulp-awspublish": "3.0.1",
     "gulp-jade": "1.1.0",
+    "gulp-rev": "7.0.0",
+    "gulp-rev-replace": "0.4.3",
     "gulp-sass": "2.2.0",
     "gulp-sequence": "0.4.5",
     "gulp-uglify": "1.5.3",
