--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "list.js": "1.2.0"
   },
   "devDependencies": {
-    "browser-sync": "2.11.2",
+    "browser-sync": "^2.12.5",
     "browserify": "13.0.0",
     "del": "2.2.0",
-    "eslint": "2.5.1",
+    "eslint": "^2.9.0",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
-    "gulp-awspublish": "3.0.1",
+    "gulp-awspublish": "^3.0.2",
     "gulp-jade": "1.1.0",
     "gulp-rev": "7.0.0",
     "gulp-rev-replace": "0.4.3",
-    "gulp-sass": "2.2.0",
+    "gulp-sass": "^2.3.1",
     "gulp-sequence": "0.4.5",
     "gulp-uglify": "1.5.3",
     "gulp-watch": "4.3.5",
