--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
-    "list.js": "1.2.0"
+    "list.js": "1.5.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.12.5",
-    "browserify": "13.0.0",
-    "del": "2.2.0",
-    "eslint": "^2.9.0",
+    "browser-sync": "2.23.7",
+    "browserify": "16.2.0",
+    "del": "3.0.0",
+    "eslint": "4.19.1",
     "gulp": "3.9.1",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-awspublish": "^3.0.2",
+    "gulp-autoprefixer": "5.0.0",
+    "gulp-awspublish": "3.3.3",
     "gulp-jade": "1.1.0",
-    "gulp-rev": "7.0.0",
-    "gulp-rev-replace": "0.4.3",
-    "gulp-sass": "^2.3.1",
-    "gulp-sequence": "0.4.5",
-    "gulp-uglify": "1.5.3",
-    "gulp-watch": "4.3.5",
-    "require-dir": "0.3.0",
-    "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0",
-    "watchify": "3.7.0"
+    "gulp-rev": "8.1.1",
+    "gulp-rev-replace": "0.4.4",
+    "gulp-sass": "4.0.1",
+    "gulp-sequence": "1.0.0",
+    "gulp-uglify": "3.0.0",
+    "gulp-watch": "5.0.0",
+    "require-dir": "1.0.0",
+    "vinyl-buffer": "1.0.1",
+    "vinyl-source-stream": "2.0.0",
+    "watchify": "3.11.0"
   },
   "engines": {
     "node": "5.9.0"
